Modified the Linear Regression Model

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Predicting on the test set\n",
-    "y_pred = regressor.predict(y_test)"
+    "y_pred = regressor.predict(X_test)"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# Checking the accuracy\n",
-    "accuracy = accuracy_score(y_true = X_test, y_pred = y_pred)"
+    "accuracy = accuracy_score(y_true = y_test, y_pred = y_pred)"
    ]
   }
  ],
