Added KNN Classifier and made small changes

--- a/KNN Classifier.ipynb
+++ b/KNN Classifier.ipynb
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
@@ -43,8 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the degree for the polynomial regressor\n",
-    "degree = 2"
+    "# Feature Scaling"
    ]
   },
   {
@@ -53,9 +53,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fitting Polynomial Regression to the training set\n",
-    "regressor = PolynomialFeatures(degree = degree)\n",
-    "X_train = regressor.fit_transform(X_train)\n",
+    "# Set the number of nearest neighbors\n",
+    "neighbors = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting Logistic Regression to the training set\n",
+    "regressor = KNeighborsClassifier(n_neighbors = neighbors)\n",
     "regressor.fit(X_train, y_train)"
    ]
   },
@@ -66,7 +75,6 @@
    "outputs": [],
    "source": [
     "# Predicting on the test set\n",
-    "X_test = regressor.fit_transform(X_test)\n",
     "y_pred = regressor.predict(X_test)"
    ]
   },
@@ -76,19 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Checking the accuracy\n",
-    "accuracy = accuracy_score(y_true = y_test, y_pred = y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualising the result\n",
-    "plt.scatter(X, y, color = 'blue')\n",
-    "plt.plot(X, regressor.predict(regressor.fit_transform(X)), color = 'green')"
+    "# Making the Confusion Matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)"
    ]
   }
  ],
