--- a/Random Forest Regression.ipynb
+++ b/Random Forest Regression.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fitting Linear Regression to the training set\n",
+    "# Fitting Random Forest Regression to the training set\n",
     "regressor = RandomForestRegressor(n_estimators = 300, random_state = 42)\n",
     "regressor.fit(X_train, y_train)"
    ]
