Added Naive Bayes Classifier and some minor changes

--- a/KNN Classifier.ipynb
+++ b/KNN Classifier.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fitting Logistic Regression to the training set\n",
+    "# Fitting KNN Classifier to the training set\n",
     "regressor = KNeighborsClassifier(n_neighbors = neighbors)\n",
     "regressor.fit(X_train, y_train)"
    ]
