--- a/Logistic Regression Classifier.ipynb
+++ b/Logistic Regression Classifier.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fitting Logistic Regression to the training set\n",
+    "# Fitting Logistic Regression Classifier to the training set\n",
     "regressor = LogisticRegression(random_state = 42)\n",
     "regressor.fit(X_train, y_train)"
    ]
