--- a/Naive Bayes Classifier.ipynb
+++ b/Naive Bayes Classifier.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fitting Suport Vector Classifier to the training set\n",
-    "regressor = SVC(random_state = 42)\n",
+    "# Fitting Naive Bayes Classifier to the training set\n",
+    "regressor = GaussianNB()\n",
     "regressor.fit(X_train, y_train)"
    ]
   },
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# Making the Confusion Matrix\n",
-    "cm = confusion_matrix(y_test, y_pred)"
+    "cm = confusion_matrix(y_test, y_pred) "
    ]
   }
  ],
