--- a/Polynomial Regression.ipynb
+++ b/Polynomial Regression.ipynb
@@ -12,6 +12,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
@@ -53,9 +54,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Preprocessing the data\n",
+    "poly = PolynomialFeatures(degree = degree)\n",
+    "X_train = poly.fit_transform(X_train)\n",
+    "X_test = poly.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Fitting Polynomial Regression to the training set\n",
-    "regressor = PolynomialFeatures(degree = degree)\n",
-    "X_train = regressor.fit_transform(X_train)\n",
+    "regressor = LinearRegression()\n",
     "regressor.fit(X_train, y_train)"
    ]
   },
@@ -66,7 +78,6 @@
    "outputs": [],
    "source": [
     "# Predicting on the test set\n",
-    "X_test = regressor.fit_transform(X_test)\n",
     "y_pred = regressor.predict(X_test)"
    ]
   },
@@ -88,7 +99,7 @@
    "source": [
     "# Visualising the result\n",
     "plt.scatter(X, y, color = 'blue')\n",
-    "plt.plot(X, regressor.predict(regressor.fit_transform(X)), color = 'green')"
+    "plt.plot(X, regressor.predict(poly.fit_transform(X)), color = 'green')"
    ]
   }
  ],
